--- a/index.css
+++ b/index.css
@@ -72,15 +72,19 @@ body{
             }
         }
         #experiencia:hover{
+            justify-content: center;
             border-radius: 0%;
             width:100%;
+            span{
             p{
                 width: 0;
                 height: 0;
                 opacity: 0;
             }
             ol{
-                margin-top: 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
                 font-size: 40px;
                 height: 100%;
                 width: 70%;
