--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title slot="start"> Usuarios </ion-title>
-    <ion-button slot="end"> Crear Usuario </ion-button>
+    <ion-button slot="end" (click)="createUser()"> Crear Usuario </ion-button>
   </ion-toolbar>
 </ion-header>
 
