UPDATE: funcionamiento y ortografia

--- a/front_angular/src/app/edit-form/edit-form.page.html
+++ b/front_angular/src/app/edit-form/edit-form.page.html
@@ -24,7 +24,7 @@
           <ion-label position="floating">Contraseña:</ion-label>
           <ion-input type="password" [(ngModel)]="contrasena" name="contrasena"></ion-input>
         </ion-item>
-        <ion-button (click)="imprimir()">
+        <ion-button (click)="selectJob()">
           imprimir
         </ion-button>
       </form>
