--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -3,12 +3,19 @@
     <ion-title slot="start"> Usuarios </ion-title>
     <ion-button slot="end" (click)="createUser()"> Crear Usuario </ion-button>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar 
+      animated="true" 
+      placeholder="Buscar usuario" 
+      clear-icon="trash-bin"
+      (ionInput)="filterUsers($event)">
+    </ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
   <ion-list>
-    <ion-item *ngFor="let usuario of usuarios">
+    <ion-item *ngFor="let usuario of filteredUsuarios">
       <ion-label id="credenciales">
         <h2>{{ usuario.nombreUsuario }} {{ usuario.apellidoUsuario }}</h2>
         <div>
@@ -36,5 +43,4 @@
       </ion-label>
     </ion-item>
   </ion-list>
-  
 </ion-content>
