--- a/front_angular/src/app/edit-form/edit-form.page.html
+++ b/front_angular/src/app/edit-form/edit-form.page.html
@@ -24,9 +24,10 @@
           <ion-label position="floating">Contraseña:</ion-label>
           <ion-input type="password" [(ngModel)]="contrasena" name="contrasena"></ion-input>
         </ion-item>
-        <ion-button (click)="selectJob()">
+        <ion-button id="open-loading" (click)="selectJob()">
           imprimir
         </ion-button>
+        <ion-loading trigger="open-loading" message="Loading..." [duration]="2000" spinner="circular"></ion-loading>
       </form>
     </ion-card-content>
   </ion-card>
