STYLE: space of the lenguage buttons

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -66,11 +66,10 @@
                 <ion-button expand="block">Frontend lenguajes</ion-button>
                 <ion-button expand="block">Bases de Datos lenguajes</ion-button>
               </div>
+              <ion-card id="graficas">
+                aca va el contenido de las graficas de las habilidades
+              </ion-card>
             </ion-item>
-
-            <!-- <app-backend-chart></app-backend-chart>
-            <app-frontend-chart></app-frontend-chart>
-            <app-database-chart></app-database-chart> -->
 
           </div>
         </ion-accordion>
