INCORPORATE: components archive / files

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -67,7 +67,7 @@
                 <ion-button expand="block">Bases de Datos lenguajes</ion-button>
               </div>
               <ion-card id="graficas">
-                aca va el contenido de las graficas de las habilidades
+                <app-frontend-graphic-component></app-frontend-graphic-component>
               </ion-card>
             </ion-item>
 
