--- a/front_angular/src/app/components/frontend-graphic-component/frontend-graphic-component.component.html
+++ b/front_angular/src/app/components/frontend-graphic-component/frontend-graphic-component.component.html
@@ -1,10 +1,3 @@
-<!-- <ion-content>
-  estaa
-
-  <ion-card>
-    <ion-card-content>
-      <canvas #barCanvas></canvas>
-    </ion-card-content>
-  </ion-card>
-</ion-content> -->
-estsa
+<ion-content>
+  <canvas #barCanvas style="width: 100%; height: 400px;"></canvas>
+</ion-content>
