CREATE: graphics components

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -67,7 +67,9 @@
                 <ion-button expand="block">Bases de Datos lenguajes</ion-button>
               </div>
               <ion-card id="graficas">
-                <app-frontend-graphic-component></app-frontend-graphic-component>
+                <!-- <app-frontend-graphic-component></app-frontend-graphic-component> -->
+                <!-- <app-backend-graphic-component></app-backend-graphic-component> -->
+                 <app-backend-graphic-component></app-backend-graphic-component>
               </ion-card>
             </ion-item>
 
