--- a/front_angular/src/app/home/home.page.scss
+++ b/front_angular/src/app/home/home.page.scss
@@ -1,6 +1,13 @@
-img{
-    height: 100px;
-    width: 80px;
+#arriba{
+    display: flex;
+    align-items: center;
+    img{
+        height: 30%;
+        width: 20%;
+    }
+    div{
+        margin-left: 18%;
+    }
 }
 
 #card_back{
@@ -46,4 +53,26 @@ img{
         font-size: 50px;
         cursor: pointer;
     }
+}
+
+.button-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 500px;
+    ion-button{
+        height: 50px;
+    }
+}
+
+#graficas{
+    width: 50%;
+    height: 500px;
+}
+
+#lista_hobby{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
