--- a/front_angular/src/app/home/home.page.scss
+++ b/front_angular/src/app/home/home.page.scss
@@ -1,78 +1,119 @@
-#arriba{
+/* src/app/home/home.page.scss */
+
+/* Contenedor principal */
+#portfolio-container {
     display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
+}
+
+/* Sección superior */
+#arriba {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    img{
-        height: 30%;
-        width: 20%;
-    }
-    div{
-        margin-left: 18%;
-    }
+    text-align: center;
+    margin-bottom: 1.5rem;
 }
 
-#card_back{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
+#profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
 }
 
-#card_front{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
+/* Información del perfil */
+#profile-info h1, #profile-info h4 {
+    margin: 0.25rem 0;
 }
 
-#card_db{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
+/* Sección media */
+#medio {
+    flex: 1;
+    padding: 1rem;
 }
 
-#footer-icons{
+.section {
+    margin-bottom: 1.5rem;
+}
+
+#lista_hobby {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+}
+
+/* Gráficas */
+#graficas {
+    margin-top: 1.5rem;
+}
+
+/* Sección inferior */
+#abajo {
+    flex: 1;
+    padding: 1rem;
+}
+
+/* Pie de página */
+ion-footer {
+    background-color: #f8f9fa;
+    padding: 1rem;
+}
+
+#footer-icons {
     display: flex;
-    justify-content: space-evenly;
-    ion-icon{
-        font-size: 50px;
-        cursor: pointer;
+    justify-content: center;
+    gap: 1rem;
+}
+
+#footer-icons ion-icon {
+    font-size: 1.5rem;
+    color: #333;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    #profile-img {
+        width: 120px;
+        height: 120px;
+    }
+
+    #medio, #abajo {
+        padding: 0.75rem;
+    }
+
+    #footer-icons ion-icon {
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width: 480px) {
+    #profile-img {
+        width: 100px;
+        height: 100px;
+    }
+
+    #portfolio-container {
+        padding: 0.5rem;
+    }
+
+    #footer-icons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #footer-icons ion-icon {
+        font-size: 1.2rem;
     }
 }
 
 .button-group{
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 50%;
-    height: 500px;
-    ion-button{
-        height: 50px;
-    }
-}
-
-#graficas{
-    width: 50%;
-    height: 500px;
-}
-
-#lista_hobby{
-    display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
 }
