GENERATE: create a colombian map

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div id="portfolio-container">
+  
     <div id="arriba">
       <img id="profile-img" src="../../assets/programer.jpg" alt="Programer img">
       <div id="profile-info">
@@ -110,10 +110,9 @@
     <div id="abajo">
       <app-echarts></app-echarts>
     </div>
-  </div>
 </ion-content>
 
-<ion-footer>
+<ion-item>
   <ion-toolbar>
     <div id="footer-icons">
       <ion-icon name="mail-outline"></ion-icon>
@@ -122,4 +121,4 @@
       <ion-icon name="logo-linkedin"></ion-icon>
     </div>
   </ion-toolbar>
-</ion-footer>
+</ion-item>
