--- a/front_angular/src/app/components/echarts/echarts.component.html
+++ b/front_angular/src/app/components/echarts/echarts.component.html
@@ -1,5 +1,2 @@
-<p>
-  echarts works!
-</p>
-
-<div #chartContainer style="width: 100%; height: 100%;"></div>
+<!-- src/app/components/echarts/echarts.component.html -->
+<div #chartContainer style="width: 500px; height: 500px;"></div>
