STYLE: new presentation card

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -8,10 +8,9 @@
 <ion-content [fullscreen]="true">
   
     <div id="arriba">
-      <img id="profile-img" src="../../assets/programer.jpg" alt="Programer img">
-      <div id="profile-info">
+      <img id="profile_img" src="../../assets/programer.jpg" alt="Programer img">
+      <div id="profile_info">
         <h1>Juan Sebastian Martinez Lesmes</h1>
-        <h4>Colombiano</h4>
         <h4>Analista desarrollador de software</h4>
       </div>
     </div>
