--- a/front_angular/src/app/components/echarts/echarts.component.html
+++ b/front_angular/src/app/components/echarts/echarts.component.html
@@ -1,2 +1,2 @@
 <!-- src/app/components/echarts/echarts.component.html -->
-<div #chartContainer style="width: 500px; height: 500px;"></div>
+<div #chartContainer style="width: 500px; height: 500px;" id="map"></div>
