--- a/front_angular/src/app/components/echarts/echarts.component.scss
+++ b/front_angular/src/app/components/echarts/echarts.component.scss
@@ -5,9 +5,9 @@
     height: 100%;
 }
 
-div {
-    background: blue;
-    width: 500px;
-    height: 500px; /* Ajusta la altura aquí */
-    
+#map {
+    width: 100%;
+    height: 500px;
 }
+
+
