--- a/front_angular/src/app/home/home.page.scss
+++ b/front_angular/src/app/home/home.page.scss
@@ -20,12 +20,72 @@
     justify-content: space-evenly;
     text-align: center;
     flex-wrap: wrap;
+    h1 {
+        font-size: 5vw; 
+    }
+    h4 {
+        font-size: 3.5vw; 
+    }
+}
+
+/* Presentación (quien soy)*/
+#content_presentation{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 1%;
+    p{
+        flex: 1;
+        width: 40%;
+        height: 100%;
+        justify-content: space-evenly;
+        font-size: 2vw;
+        @media (max-width: 768px) { // Tamaño ajustado para pantallas móviles
+            font-size: 4.5vw; 
+        }
+    }
+    app-echarts{
+        flex: 1;
+    }
+}
+
+/* lenguajes de programación*/
+#content_graphics{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+}
+
+#button-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 30%;
+    ion-button{
+        flex: 1;
+    }
+
+    @media (max-width: 768px) { // Tamaño ajustado para pantallas móviles
+        font-size: 4.5vw; 
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        justify-content: space-evenly;
+        ion-button{
+            flex: 1;
+        }
+    }
+}
+#graphics{
+    width: 65%;
+    height: auto;
 }
 
 /* Pie de página */
 ion-footer {
     background-color: #f8f9fa;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 #footer-icons {
