--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -39,24 +39,6 @@
         <ion-accordion-group>
           <ion-accordion>
             <ion-item slot="header">
-              <ion-label>Hobbys</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              <ol id="lista_hobby">
-                <li>Puzzles</li>
-                <li>Escuchar música</li>
-                <li>Jugar videojuegos</li>
-                <li>Ver películas</li>
-              </ol>
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
-      </div>
-
-      <div class="section">
-        <ion-accordion-group>
-          <ion-accordion>
-            <ion-item slot="header">
               <ion-label>Estudios</ion-label>
             </ion-item>
             <div slot="content">
@@ -74,9 +56,30 @@
             <ion-item slot="header">
               <ion-label><h3> Experiencia </h3></ion-label>
             </ion-item>
-            <div class="ion-padding" slot="content">
-              <p>Sena: 2022 - 2023</p>
-              <p>Grupo-ASD: 2023 - 2024</p>
+            <div slot="content" id="experiencia">
+              <div id="botones_experiencia">
+                <ion-button (click)="experience_jobs()">Trabajos</ion-button>
+                <ion-button (click)="experience_reference()">Referencias</ion-button>
+              </div>
+              <div id="cards_experiencia" *ngIf="experience_call === 'jobs'">
+                <ion-card class="card_experiencia">
+                  <ion-card-title>Sena</ion-card-title>
+                  <ion-card-subtitle> jun/2022 - dic/2023</ion-card-subtitle>
+                  <ion-card-content>Aprendiz</ion-card-content>
+                </ion-card>
+                <ion-card class="card_experiencia">
+                  <ion-card-title>Grupo-ASD</ion-card-title>
+                  <ion-card-subtitle> dic/2023 - jun/2024</ion-card-subtitle>
+                  <ion-card-content>Analista y dasarrollador de software</ion-card-content>
+                </ion-card>
+              </div>
+              <div id="cards_experiencia" *ngIf="experience_call === 'reference'">
+                <ion-card>
+                  <ion-card-title>Nombre</ion-card-title>
+                  <ion-card-subtitle>cargo</ion-card-subtitle>
+                  <ion-card-subtitle>celular</ion-card-subtitle>
+                </ion-card>
+              </div>
             </div>
           </ion-accordion>
         </ion-accordion-group>
@@ -96,8 +99,8 @@
               </div>
               <ion-card id="graphics">
                 <h3>Gráfica de {{graphic}} :</h3>
-                <app-frontend-graphic-component *ngIf="graphic === 'front'"></app-frontend-graphic-component>
                 <app-backend-graphic-component *ngIf="graphic === 'back'"></app-backend-graphic-component>
+                <app-frontend-graphic-component *ngIf="graphic === 'front'"></app-frontend-graphic-component>
                 <app-database-graphic-component *ngIf="graphic === 'database'"></app-database-graphic-component>
               </ion-card>
             </div>
