--- a/front_angular/src/app/home/home.page.scss
+++ b/front_angular/src/app/home/home.page.scss
@@ -1,57 +1,171 @@
+/* arriba */
 #arriba{
     display: flex;
-    align-items: center;
-    img{
-        height: 30%;
-        width: 20%;
-    }
-    div{
-        margin-left: 18%;
-    }
+    flex-direction: row;
 }
 
-#card_back{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
+#profile_img{
+    width: 30%;
+    border-radius: 50%;
 }
 
-#card_front{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
-}
-
-#card_db{
-    width: 33;
-    ion-card-content{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        ion-icon{
-            font-size: 30px;
-        }
-    }
-}
-
-#footer-icons{
+#profile_info{
+    background: linear-gradient(to right, transparent, rgba(255, 0, 0, 0.494));
+    border-radius: 25px;
+    margin: 3%;
+    width: 70%;
+    height: auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    ion-icon{
-        font-size: 50px;
-        cursor: pointer;
+    text-align: center;
+    flex-wrap: wrap;
+    h1 {
+        font-size: 5vw; 
+    }
+    h4 {
+        font-size: 3.5vw; 
+    }
+}
+
+/* Presentación (quien soy) */
+#content_presentation{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 1%;
+    p{
+        flex: 1;
+        width: 40%;
+        height: 100%;
+        justify-content: space-evenly;
+        font-size: 2vw;
+        @media (max-width: 768px) { // Tamaño ajustado para pantallas móviles
+            font-size: 4.5vw; 
+        }
+    }
+    app-echarts{
+        flex: 1;
+    }
+}
+
+/* experienia */
+#experiencia{
+    display: flex;
+    flex-wrap: wrap;
+    #botones_experiencia{
+        width: 20%;
+        display: flex;flex-direction: column;
+        justify-content: space-evenly;
+        ion-buttton{
+            flex: 1;
+        }
+    }
+    #cards_experiencia{
+        width: 80%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .card_experiencia{
+            padding: 1%;
+            // text-align: center;
+            align-items: center;
+            width: 35%;
+            height: auto;
+        }
+    }
+}
+
+/* lenguajes de programación*/
+#content_graphics{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+}
+
+#button-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 30%;
+    ion-button{
+        flex: 1;
+        font-size: 1.5vw; 
+    }
+
+    @media (max-width: 768px) { // Tamaño ajustado para pantallas móviles
+        font-size: 4.5vw; 
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        justify-content: space-evenly;
+        ion-button{
+            font-size: 4.5vw; 
+            flex: 1;
+        }
+    }
+}
+#graphics{
+    width: 65%;
+    height: auto;
+    h3{
+        --background: red;
+        font-size: 1.5vw; 
+    }
+    @media (max-width: 768px) {
+        h3{
+            font-size: 4.5vw; 
+        }
+    }
+}
+
+/* Pie de página */
+ion-footer {
+    background-color: #f8f9fa;
+    padding: 2rem;
+}
+
+#footer-icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+
+#footer-icons ion-icon {
+    font-size: 2.5rem;
+    color: white;
+}
+
+/* Media Queries */
+@media (max-width: 768px) { // Tamaño ajustado para pantallas móviles
+    #profile-img {
+        width: 120px;
+        height: 120px;
+    }
+
+    #medio {
+        padding: 0.75rem;
+    }
+
+    #footer-icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        font-size: 1.3rem;
+        gap: 1rem;
+        color: white;
+    }
+}
+
+.button-group{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    ion-button{
+        flex: 1;
     }
 }
 
